--- a/sobre.css
+++ b/sobre.css
@@ -1,5 +1,5 @@
 #cardsSobre {
-    margin-top: -120px;
+    margin-top: -140px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -13,6 +13,15 @@
     flex-wrap: wrap; 
 }
 
+.cardInfo-menor {
+    width: 430px;
+    height: 280px;
+    background: rgba(255, 255, 255, 0.03);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border: 1px solid rgba(255, 255, 255, 0.05);
+}
+
 .cardInfo-menor,
 .cardInfo-maior {
     color: white;
@@ -23,12 +32,50 @@
     box-shadow: 0 0 10px rgba(232, 177, 9, 0.06);
 }
 
-.cardInfo-menor {
-    width: 430px;
-    height: 250px;
-    background: #0F172A;
-    border: 1px solid rgba(255, 255, 255, 0.05);
+.cardicon {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
+
+.icon-eye {
+  width: 32px;
+  height: 32px;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.icon-eye::before {
+  content: "";
+  position: absolute;
+  top: 0;  
+  left: 20px;
+  width: 65px; 
+  height: 2px; 
+  background-color: #4480C4; 
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+}
+
+.cardicon h3 {
+  padding-top: 10px;
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: white;
+  margin: 0;
+}
+
+.cardicon p {
+  font-size: 0.95rem;
+  color: rgba(255, 255, 255, 0.75);
+  line-height: 1.5;
+  margin: 0;
+}
+
+
 
 .cardInfo-maior {
     width: 890px;
@@ -38,6 +85,8 @@
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
 }
+
+
 
 /* RESPONSIVIDADE*/
 @media screen and (max-width: 376px) {
@@ -95,20 +144,33 @@
 
     #cardsSobre {
         margin-top: -280px;
-        gap: 30px;
+        gap: 50px;
     }
 
     .cardLinha {
         flex-direction: column;
         align-items: center;
-        gap: 25px;
+        gap: 50px;
     }
+
+    .icon-eye::before {
+        content: "";
+        position: absolute;
+        top: 0;  
+        left: 30px;
+        width: 65px; 
+        height: 3px; 
+        background-color: #4480C4; 
+        border-top-left-radius: 8px;
+        border-top-right-radius: 8px;
+    }
+
 }
 
 
 @media screen and (min-width: 1200px) and (max-width: 1599px) {
     #cardsSobre {
-        margin-top: 100px;
+        margin-top: 10px;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -124,14 +186,14 @@
     
     .cardInfo-menor {
         font-size: 1.2rem;
-        width: 430px;
-        height: 300px;
+        width: 400px;
+        height: 320px;
     }
     
     .cardInfo-maior {
         font-size: 1.2rem;
-        width: 890px;
-        height: 300px;
+        width: 840px;
+        height: 320px;
     }
   }
   
