--- a/testemunhas.css
+++ b/testemunhas.css
@@ -55,6 +55,10 @@
   .tituloTestemunhas {
     font-size: 26px;
     margin-top: 100px;
+    max-width: 300px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
   }
 
   #containerTestemunhas {
@@ -76,7 +80,11 @@
 
 @media screen and (min-width: 377px) and (max-width: 480px) {
   .tituloTestemunhas {
-    font-size: 28px;
+    font-size: 29px;
+    max-width: 350px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
   }
 
   #containerTestemunhas {
@@ -97,7 +105,11 @@
 
 @media screen and (min-width: 768px) and (max-width: 991px) {
   .tituloTestemunhas {
-    font-size: 32px;
+    font-size: 42px;
+    max-width: 660px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
   }
 
   #containerTestemunhas {
@@ -118,7 +130,7 @@
 
 @media screen and (min-width: 1200px) and (max-width: 1599px) {
   .tituloTestemunhas {
-    font-size: 36px;
+    font-size: 40px;
   }
 
   #containerTestemunhas {
