--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
   background: #040911;/* linear-gradient(145deg, #0f172a, #1e293b)*/
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: white;
-  min-height: 200vh;
+  height: 100vh;
   overflow-x: hidden;
 }
 
@@ -18,6 +18,7 @@ html {
   scroll-behavior: smooth;
 }
 */
+
 
 
 
