--- a/footer.css
+++ b/footer.css
@@ -1,20 +1,20 @@
 
     .footer {
       margin-top: 80px;
-      background-color: #f1f1f1;
+      background-color: #0b223d;
       text-align: center;
       padding: 20px 10px;
     }
 
     .footer a {
-      color: #000;
+      color: #ececec;
       text-decoration: none;
       margin: 0 15px;
       display: inline-block;
     }
 
     .footer p {
-        color: #555;
+        color: #f0f0f0;
         margin-top: 10px;
     }
     /* 377px até 480px */
