--- a/planos.css
+++ b/planos.css
@@ -1,4 +1,4 @@
-.tituloPlanos {
+#tituloPlanos {
   font-size: 40px;
   margin-top: 220px;
   text-align: center;
@@ -124,7 +124,7 @@
 
 
 @media screen and (min-width: 321px) and (max-width: 376px)  {
-    .tituloPlanos {
+    #tituloPlanos {
       font-size: 26px;
       margin-top: 100px;
       max-width: 300px;
@@ -142,7 +142,7 @@
 }
 
 @media screen and (min-width: 377px) and (max-width: 480px) {
-  .tituloPlanos {
+  #tituloPlanos {
     font-size: 29px;
     margin-top: 130px;
     margin-bottom: -50px;
@@ -160,7 +160,7 @@
 }
 
 @media screen and (min-width: 768px) and (max-width: 991px) {
-  .tituloPlanos {
+  #tituloPlanos {
     font-size: 42px;
     margin-top: 130px;
     margin-bottom: -40px;
