--- a/faqs.css
+++ b/faqs.css
@@ -97,6 +97,12 @@
 
 /* 377px até 480px */
 @media (min-width: 377px) and (max-width: 480px) {
+
+  .faq-item{
+    width: 80vw;
+    height: auto;
+  }
+
   .faq-title {
     font-size: 1.5rem;
   }
