--- a/luzes.css
+++ b/luzes.css
@@ -1,9 +1,9 @@
 
 
 .light-container {
+  position: relative;
   width: 100%;
-  /*height: 100vh;*/
-  overflow: hidden;
+  overflow-x: hidden;
   z-index: 6;
 }
 
