--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 
 * {
   max-width: 100vw;
+  overflow-x: hidden;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -13,6 +14,7 @@ body {
   height: 100vh;
   overflow-x: hidden;
 }
+
 
 /*
 html {
