--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,13 @@ html {
 }
 */
 
+ @media screen and (min-width: 768px) and (max-width: 991px) {
+  body {
+    max-width: 100vw;
+    overflow-x: hidden;
+  }
+ }
+
 
 
 
