--- a/luzes.css
+++ b/luzes.css
@@ -86,6 +86,7 @@
 @media (min-width: 768px) and (max-width: 991px) {
 
   .light-container {
+    width: 90vw;
     overflow: hidden;
     top: 0;
     left: 0;
