--- a/luzes.css
+++ b/luzes.css
@@ -103,7 +103,7 @@
   .beam1 { left: 10%; top: -40%; }
   .beam2 { left: 40%; top: -40%; }
   .beam3 { left: 70%; top: -40%; }
-  .beam4 { left: 100%; top: -40%; }
+  .beam4 { display: none; }
   .beam5 {display: none; }
   .beam6 { display: none;}
 }
