--- a/planos.css
+++ b/planos.css
@@ -183,6 +183,10 @@
   .lista-premium {
     font-size: 1.3rem;
   }
+
+  #um {
+    margin-bottom: -30px;
+  }
 }
 
 @media screen and (min-width: 1200px) and (max-width: 1599px) {
