--- a/assets/css/planos.css
+++ b/assets/css/planos.css
@@ -15,6 +15,7 @@
 }
 
 .cardPlanos {
+  
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -37,21 +38,6 @@
   border-top: 1px solid rgba(0, 255, 255, 0.08);
 }
 
-.btn-premium {
-  margin-top: auto;
-  width: 100%;
-  padding: 0.9rem 0;
-  background: #4480C4;
-  border: none;
-  border-radius: 14px;
-  color: white;
-  font-size: 1rem;
-  font-weight: 600;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  box-shadow: 0 5px 25px rgba(72, 128, 196, 0.4);
-  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
-}
 
 
 .titulo-premium {
@@ -79,6 +65,21 @@
   margin-top: 0.7rem;
 }
 
+.btn-premium {
+  margin-top: auto;
+  width: 100%;
+  padding: 0.9rem 0;
+  background: #4480C4;
+  border: none;
+  border-radius: 14px;
+  color: white;
+  font-size: 1rem;
+  font-weight: 600;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  box-shadow: 0 5px 25px rgba(72, 128, 196, 0.4);
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
+}
 
 .btn-premium:hover {
   transform: translateY(-2px);
@@ -173,40 +174,28 @@
   .cardPlanos {
     height: 800px;
     margin-top: 60px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    padding: 2.5rem 2rem 3.5rem;
+  }
+
+  .titulo-premium  {
+    font-size: 1.5rem;
   }
 
   .lista-premium {
     font-size: 1.3rem;
-    min-height: 240px; /* Garante altura uniforme para o conteúdo acima do botão */
   }
 
-  .btn-premium {
-    margin-top: auto;
-    align-self: flex-start; /* ou center, se quiser centralizar o botão */
-    width: 100%;
-    padding: 0.9rem 0;
-    background: #00bfff;
-    border: none;
-    border-radius: 14px;
-    color: white;
-    font-weight: 600;
-    cursor: pointer;
-    transition: all 0.3s ease;
+  #um {
+    margin-top: 50px;
   }
 
-  .titulo-premium {
-    font-size: 1.5rem;
+  #lumenPremioBtn {
+    margin-top: 70px;
   }
 
-  /* Remover margem do card individual */
-  /* #um { margin-top: 0; } */
+  #lumenIndividualBtn {
+    margin-top: 70px;
+  }
 }
-
-
 
 @media screen and (min-width: 1200px) and (max-width: 1599px) {
 
