--- a/assets/css/planos.css
+++ b/assets/css/planos.css
@@ -161,6 +161,7 @@
 }
 
 @media screen and (min-width: 768px) and (max-width: 991px) {
+
   #tituloPlanos {
     font-size: 42px;
     margin-top: 130px;
@@ -172,8 +173,9 @@
   }
 
   .cardPlanos {
+    max-width: 420px;
+    padding: 2.5rem 2rem 3rem;
     height: 800px;
-    margin-top: 60px;
   }
 
   .titulo-premium  {
@@ -182,10 +184,6 @@
 
   .lista-premium {
     font-size: 1.3rem;
-  }
-
-  #um {
-    margin-top: 50px;
   }
 
   #lumenPremioBtn {
