--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -30,6 +30,30 @@ html {
 
 
 
+ @keyframes fadeUp {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+/* Elementos com animação */
+.fade-up {
+  opacity: 0;
+  transform: translateY(30px);
+  transition: opacity 0.8s ease, transform 0.8s ease;
+}
+
+.fade-up.animate {
+  animation: fadeUp 2s ease forwards;
+}
+
+
+
 
 
 
